--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,6 +3,5 @@
 @import 'tailwindcss/utilities';
 
 .stroke-text {
-  -webkit-text-stroke: 0.4px black;
-  text-stroke: 0.4px black;
+  stroke: 0.4px black;
 }
